made minor fixes related to text-align in index page

--- a/Cmarc Website/style.css
+++ b/Cmarc Website/style.css
@@ -115,9 +115,10 @@ nav li:hover .dropdown__menu{
     /* margin: 10% auto 2% auto; */
 }
 .hero-text-button p{
-   
+    margin: 3% auto;
     font-size: 0.85em;
-    
+    text-align: center;
+    line-height: 0.2rem;
 }
 
 button{
@@ -132,6 +133,10 @@ button{
     margin-top: 3%;
     margin-bottom: auto; /* Push following elements to the bottom */
 
+}
+
+button:hover{
+    background-color: var(--clr-orange);
 }
 
 @keyframes slide {
@@ -287,7 +292,8 @@ button{
     /* border: 2px solid red; */
 }
 
-.group h2,p{
+.group h2,
+.group p{
     text-align: center;
 }
 
